Regression: Color sampling in texture paint mode crashes Blender #106762

Closed
opened 2023-04-10 14:00:30 +02:00 by Julien Kaspar · 4 comments
Member

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 516.59

Blender Version
Broken: version: 3.6.0 Alpha, branch: main, commit date: 2023-04-09 23:42, hash: 0a460d470718
Worked: 3.5

Caused by 7a267aa000

Short description of error
When using the paint.sample_color operator via the shortcut S, it will crash Blender. If there is not UV map present, it will not crash.

Exact steps for others to reproduce the error

  • Add any primitive object
  • Go to Texture Paint mode
  • Press S to color pick any surface
**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 516.59 **Blender Version** Broken: version: 3.6.0 Alpha, branch: main, commit date: 2023-04-09 23:42, hash: `0a460d470718` Worked: 3.5 Caused by 7a267aa000 **Short description of error** When using the `paint.sample_color` operator via the shortcut `S`, it will crash Blender. If there is not UV map present, it will not crash. **Exact steps for others to reproduce the error** - Add any primitive object - Go to Texture Paint mode - Press `S` to color pick any surface
Julien Kaspar added the
Type
Report
Status
Needs Triage
Priority
Normal
labels 2023-04-10 14:00:31 +02:00
Iliya Katushenock added the
Interest
Sculpt, Paint & Texture
label 2023-04-10 14:55:51 +02:00
Harley Acheson added
Status
Confirmed
and removed
Status
Needs Triage
labels 2023-04-10 17:55:39 +02:00
Member

When following the above instructions I get an exception in drw_command_create. That function is called with the DRWShadingGroup *shgroup argument uninitiated.

Immediately before this we go through new code recently added to select_cache_populate, added in 7a267aa000 from PR #105498 on April 8th.

If I had to guess I would say the new section is testing if the object is in edit mode, and if not assuming it is in object mode and only doing some shader initiation if in OB_SOLID mode, returning early if not. Since I am in neither object mode or edit mode some initialization is not done and we crash.

When following the above instructions I get an exception in `drw_command_create`. That function is called with the DRWShadingGroup *shgroup argument uninitiated. Immediately before this we go through new code recently added to `select_cache_populate`, added in 7a267aa0003599a21a1565873db818d26ac020a4 from PR #105498 on April 8th. If I had to guess I would say the new section is testing if the object is in edit mode, and if not assuming it is in object mode and only doing some shader initiation if in OB_SOLID mode, returning early if not. Since I am in neither object mode or edit mode some initialization is not done and we crash.
Harley Acheson added
Priority
High
and removed
Priority
Normal
labels 2023-04-10 18:27:28 +02:00
Harley Acheson added the
Module
EEVEE & Viewport
label 2023-04-10 18:33:28 +02:00
Member

Setting higher priority because this looks to be something that would cause similar issues far outside of the reported problem.

Setting higher priority because this looks to be something that would cause similar issues far outside of the reported problem.
Jeroen Bakker added this to the 3.6 LTS milestone 2023-04-11 09:19:26 +02:00
Jeroen Bakker added this to the EEVEE & Viewport project 2023-04-11 09:20:17 +02:00
Philipp Oeser changed title from Color sampling in texture paint mode crashes Blender to Regression: Color sampling in texture paint mode crashes Blender 2023-04-11 10:34:11 +02:00
Member
CC @fclem @mano-wii
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-04-11 11:24:30 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#106762
No description provided.