GPU: Fix Crash Sampling in Texture Paint Mode.

Added additional check if occlude pass is created.

Fix: #106762

Pull Request: https://projects.blender.org/blender/blender/pulls/106791